--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
   "name": "web-app-from-start-to-finish",
-  "version": "1.0.0",
-  "description": "web-app-from-start-to-finish",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/chuckdries/web-app-from-start-to-finish.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/chuckdries/web-app-from-start-to-finish/issues"
-  },
-  "homepage": "https://github.com/chuckdries/web-app-from-start-to-finish#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0",
+    "twig": "~0.10.3"
   }
 }
